--- a/src/App.css
+++ b/src/App.css
@@ -158,7 +158,7 @@ legend {
   }
 }
 
-/* Style général pour EmployeeList */
+/* Conteneur de la liste des employés */
 #employee-list-container {
   margin: 5% auto;
   width: 80%;
@@ -171,25 +171,10 @@ legend {
 }
 
 /* Tableau des employés */
-.dataTable {
-  width: 100%;
-  border-collapse: collapse;
-  margin-bottom: 20px;
-}
-
 .dataTable th, .dataTable td {
   padding: 12px 15px;
   border: 1px solid #b1b1a3;
   text-align: left;
-}
-
-/* Alternance de couleurs pour les lignes du tableau */
-.dataTable tbody tr:nth-child(even) {
-  background-color: #f1f5f0; /* Couleur plus claire */
-}
-
-.dataTable tbody tr:nth-child(odd) {
-  background-color: #e9ece5; /* Une autre nuance douce */
 }
 
 .dataTable th {
@@ -230,3 +215,4 @@ a:hover {
     padding: 10px;
   }
 }
+
